Update style, work on popup

--- a/app/assets/styles/_variables.scss
+++ b/app/assets/styles/_variables.scss
@@ -24,7 +24,8 @@ $positive-color: #57b27c;
 $root-font-size: 16px;
 
 $base-font-color: tint($base-color, 24%);
-$base-font-family: "Hind", "Open-sans", Arial, sans-serif;
+$base-font-family: "Open-sans", "Open-sans", Arial, sans-serif;
+$accent-font-family: "Roboto Slab", "Open-sans", Arial, sans-serif;
 $base-font-style: normal;
 $base-font-light: 100;
 $base-font-regular: 200;
