--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -28,16 +28,38 @@ html {
   }
 }
 
+a {
+  color: #37c4ab;
+  text-decoration: none;
+  &:visited {
+    color: #37c4ab;
+  }
+  &:hover {
+    color: #248271;
+    text-decoration: underline;
+  }
+  &:active {
+    color: #37c4ab;
+  }
+}
+
 header {
   width: 100%;
-  height: 1rem;
+  height: 1.25rem;
   background-color: $primary-color;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
 }
 
 h1 {
   color: white;
   font-weight: 300;
+  font-family: $accent-font-family;
+}
+
+h2 {
+  font-family: $accent-font-family;
+  font-size: 1.5rem;
+  padding: 1rem 0 2rem;
 }
 
 .welcome {
@@ -55,28 +77,44 @@ h1 {
   height: 100%;
   z-index: 100;
   background-color: #aaa;
-  width: 14rem;
+  width: 15rem;
+  a {
+    color: #999;
+    text-decoration: none;
+    &:visited {
+      color: #999;
+    }
+    &:hover {
+      color: #248271;
+      text-decoration: underline;
+    }
+    &:active {
+      color: #999;
+    }
+  }
 }
 
 .sidebar__back {
   position: fixed;
   top: 0;
   left: 0;
-  width: 14rem;
-  height: 12rem;
+  width: 15rem;
+  height: 100%;
   background-color: #aaa;
   z-index: -1;
 }
 
 .sidebar__option {
   background-color: #ddd;
-  padding: 1rem;
+  padding: 1rem 0rem 1rem 1.5rem;
   border: 1px solid #ccc;
 }
 
 .sidebar__option--active {
-  border-color: #aaa;
+  border-color: #bbb;
   background-color: #ccc;
+  color: #999;
+  font-weight: 600;
 }
 
 .Map-content {
@@ -90,8 +128,25 @@ h1 {
 }
 
 .analaysis__content {
-  margin-left: 16rem;
+  margin-left: 17rem;
   margin-right: 6rem;
 }
 
+.about__content {
+  margin-left: 17rem;
+  margin-right: 6rem;
+}
 
+.about__content--header {
+  margin-top: 2rem;
+  padding-bottom: 0;
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  color: #aaa;
+}
+
+.about__content--linebreak {
+  height: 1px;
+  background-color: #ccc;
+  width: 100%;
+}
