--- a/app/assets/styles/_base.scss
+++ b/app/assets/styles/_base.scss
@@ -47,13 +47,14 @@ header {
   width: 100%;
   height: 1.25rem;
   background-color: $primary-color;
-  padding: 1rem 1.5rem;
+  padding: 1rem 0rem;
 }
 
 h1 {
   color: white;
   font-weight: 300;
   font-family: $accent-font-family;
+  margin-left: 1.25rem;
 }
 
 h2 {
@@ -117,15 +118,62 @@ h2 {
   font-weight: 600;
 }
 
-.Map-content {
+.top-content {
+  position: relative;
   width: 100%;
-  height: 300px;
+  height: 350px;
+  clear: both;
+}
+
+.Map-content {
+  width: 600px;
+  height: 350px;
+  margin-left: 17rem;
+  float: left;
 }
 
 .main-map {
-  width: 100%;
-  height: 100%;
+  width: 350px;
+  height: 350px;
+  float: left;
 }
+
+.map-legend {
+  width: 200px;
+  height: 200px;
+  border: 1px solid green;
+  float: left;
+  margin-left: 2rem;
+}
+
+.legendText {
+  display: inline-block;
+  font-size: 1rem;
+  font-family: 'Open Sans';
+  vertical-align: middle;
+}
+
+.legendBox {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border: 1px black solid;
+  margin-right: 15px;
+  vertical-align: middle;
+}
+
+.legendTitle {
+  padding: 0;
+}
+
+/*
+.legend__content {
+  width: 300px;
+  height: 350px;
+  border: 1px solid red;
+  float: left;
+  margin-right: 6rem;
+}*/
 
 .analaysis__content {
   margin-left: 17rem;
